fix text on mobile

--- a/src/documents/css/master.css.styl
+++ b/src/documents/css/master.css.styl
@@ -398,10 +398,10 @@ header
         overflow hidden
 
     h4
-        height 90px
-        line-height 90px
+        height 100%
+        line-height 100%
+        margin-top 22px
         font-size 45px
-        margin 0px
     
     .register-link
         clear both
